made some minor changes & completed

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,8 +1,9 @@
-<%= @user.twitter_username %>
+<div class="container">
+	<%= @user.twitter_username %>
 
-<% if !@tweets.nil? %>
-	<% @tweets.each do |tweet| %>
-		<p><%= tweet.tweet_text %></p><br>
+	<% if !@tweets.nil? %>
+		<% @tweets.each do |tweet| %>
+			<p><%= tweet.tweet_text %></p><br>
+		<% end %>
 	<% end %>
-<% end %>
-
+</div>
